mobile view is set with responsive design

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 
-<div id="topDiv" class="grid-container vertical-nav">
+<div id="topDiv" class="grid-container">
 
     <div class="header">
         <div class="container">
@@ -80,7 +80,7 @@
 
         <div class="d-flex flex-column flex-shrink-0 p-3">
 
-            <ul id="menuItems" class="nav nav-pills flex-column">
+            <ul id="menuItems" class="nav nav-pills flex-column menuItems scrolling-wrapper-flexbox">
 
                 <li class="nav-item smallScreen">
                     <a href="javascript:;" class="nav-link" aria-current="page">
@@ -94,13 +94,10 @@
     </div>
 
 
-    <!--    <div class="main m-2">-->
     <div id="scrollableArea" class="main m-2 scrolling-wrapper-flexbox">
-        <i class="fas fa-chevron-left navigateIcon before"></i>
-        <i class="fas fa-chevron-right navigateIcon after"></i>
+        <i class="fas fa-chevron-left navigateIcon beforeIcon"></i>
+        <i class="fas fa-chevron-right navigateIcon afterIcon"></i>
     </div>
-
-    <!--    </div>-->
 
 
     <footer class="footer">
