footer text url added

--- a/index.html
+++ b/index.html
@@ -101,8 +101,15 @@
 
     <footer class="footer">
         <div class="container">
-            <a style="float: left">Copyright 2021 Dashboard</a>
-            <a style="float: right">Designed by Zeynep Unal</a>
+            <span style="float: left">Copyright 2022</span>
+            <span style="float: right">
+                Designed by
+                <a href="https://zeynepbusra.com/" target="_blank" class="text-decoration-none" style="color: #2f2f2f; ">
+                    <b>
+                        Zeynep Büşra Ünal
+                    </b>
+                </a>
+            </span>
         </div>
     </footer>
 
